Actions
Bug #12559
closedzs: NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with NULL pointer:
../../sun/io/zs_common.c: In function 'zsattach': ../../sun/io/zs_common.c:598: error: passing argument 6 of 'ddi_create_minor_node' makes integer from pointer without a cast ../../common/sys/sunddi.h:1571: note: expected 'int' but argument is of type 'void *' ../../sun/io/zs_common.c:605: error: passing argument 6 of 'ddi_create_minor_node' makes integer from pointer without a cast ../../common/sys/sunddi.h:1571: note: expected 'int' but argument is of type 'void *' ../../sun/io/zs_common.c:617: error: passing argument 6 of 'ddi_create_minor_node' makes integer from pointer without a cast ../../common/sys/sunddi.h:1571: note: expected 'int' but argument is of type 'void *' ../../sun/io/zs_common.c:624: error: passing argument 6 of 'ddi_create_minor_node' makes integer from pointer without a cast ../../common/sys/sunddi.h:1571: note: expected 'int' but argument is of type 'void *' ../../sun/io/zs_common.c:631: error: passing argument 6 of 'ddi_create_minor_node' makes integer from pointer without a cast ../../common/sys/sunddi.h:1571: note: expected 'int' but argument is of type 'void *' ../../sun/io/zs_common.c:638: error: passing argument 6 of 'ddi_create_minor_node' makes integer from pointer without a cast ../../common/sys/sunddi.h:1571: note: expected 'int' but argument is of type 'void *' /code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../../sun/io/zs_common.c:874 zsintr() error: unchecked function return '(*zs->zs_ops->zsop_softint)' ../../sun/io/zs_async.c: In function 'zsa_wput': ../../sun/io/zs_async.c:1324: error: comparison between pointer and integer
Also removing 'register' keyword as is considered useless with modern compilers.
Updated by Electric Monk almost 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 94bce860c16a04a3d8eaeaa18807723c026e23b5
commit 94bce860c16a04a3d8eaeaa18807723c026e23b5 Author: Toomas Soome <tsoome@me.com> Date: 2020-06-01T22:21:39.000Z 12559 zs: NULL pointer errors Reviewed by: Gergő Mihály Doma <domag02@gmail.com> Reviewed by: Peter Tribble <peter.tribble@gmail.com> Approved by: Robert Mustacchi <rm@fingolfin.org>
Actions