12559 zs: NULL pointer errors Reviewed by: Gergő Mihály Doma <domag02@gmail.com> Reviewed by: Peter Tribble <peter.tribble@gmail.com> Approved by: Robert Mustacchi <rm@fingolfin.org>